<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".StartActivity">

    <include layout="@layout/toolbar" />

    <!-- Layout for content is here. This can be a RelativeLayout  -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/basic_margin"
        android:columnCount="2"
        android:rowCount="4">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="@dimen/author_icon_width"
            android:layout_height="@dimen/author_icon_height"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="0"
            android:contentDescription="@string/author_menu_1"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_byungseon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_row="0"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/author1_title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="bottom"
                android:paddingLeft="@dimen/basic_margin"
                android:paddingRight="@dimen/basic_margin"
                android:text="@string/title_menu_1"
                android:textColor="@color/accent"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/author1_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/basic_margin"
                android:paddingRight="@dimen/basic_margin"
                android:text="@string/author_menu_1"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/author1_email_text"
                style="?android:attr/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top"
                android:paddingLeft="@dimen/basic_margin"
                android:paddingRight="@dimen/basic_margin"
                android:text="@string/email_menu_1"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/author_icon_width"
            android:layout_height="@dimen/author_icon_height"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="1"
            android:contentDescription="@string/author_menu_2"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_byungseon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_row="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/author2_title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="bottom"
                android:paddingLeft="@dimen/basic_margin"
                android:paddingRight="@dimen/basic_margin"
                android:text="@string/title_menu_2"
                android:textColor="@color/accent"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/author2_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/basic_margin"
                android:paddingRight="@dimen/basic_margin"
                android:text="@string/author_menu_2"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/author2_email_text"
                style="?android:attr/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top"
                android:paddingLeft="@dimen/basic_margin"
                android:paddingRight="@dimen/basic_margin"
                android:text="@string/email_menu_2"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/author_icon_width"
            android:layout_height="@dimen/author_icon_height"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="2"
            android:contentDescription="@string/author_menu_3"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_byungseon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_row="2"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/author3_title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="bottom"
                android:paddingLeft="@dimen/basic_margin"
                android:paddingRight="@dimen/basic_margin"
                android:text="@string/title_menu_3"
                android:textColor="@color/accent"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/author3_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/basic_margin"
                android:paddingRight="@dimen/basic_margin"
                android:text="@string/author_menu_3"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/author3_email_text"
                style="?android:attr/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top"
                android:paddingLeft="@dimen/basic_margin"
                android:paddingRight="@dimen/basic_margin"
                android:text="@string/email_menu_3"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/author_icon_width"
            android:layout_height="@dimen/author_icon_height"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="3"
            android:contentDescription="@string/author_menu_4"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_byungseon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_row="3"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/author4_title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="bottom"
                android:paddingLeft="@dimen/basic_margin"
                android:paddingRight="@dimen/basic_margin"
                android:text="@string/title_menu_4"
                android:textColor="@color/accent"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/author4_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/basic_margin"
                android:paddingRight="@dimen/basic_margin"
                android:text="@string/author_menu_4"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/author4_email_text"
                style="?android:attr/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top"
                android:paddingLeft="@dimen/basic_margin"
                android:paddingRight="@dimen/basic_margin"
                android:text="@string/email_menu_4"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>
    </GridLayout>

</LinearLayout>

